--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
                             <div class="accordion-item">
                               <a
-                                href="#"
+                                href="./pages/enrollment/student-enrollment.html"
                                 class="accordion-header"
                                 id="scholarships"
                               >
@@ -803,15 +803,87 @@
       </div>
     </section>
 
+    <!-- contact gunadarma -->
+    <div class="contact__gunadarma">
+      <div class="container">
+        <div class="row row-cols-lg-3 row-cols-1 align-items-start">
+          <div class="col">
+            <div class="location">
+              <h5>Locations</h5>
+              <div class="location__content">
+                <p>Kampus Depok (Kampus D)</p>
+                <p>Jln.Margonda Raya No 100 Gd2. Lt2 <br> Pondok Cina, Depok 16424 <br> Jawa Barat - Indonesia</p>
+                <a href="#">Kampus Lainnya</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="link">
+              <h5>Link</h5>
+              <div class="link__content">
+                <ul>
+                  <li>
+                    <a href="http://staffsite.gunadarma.ac.id/" target="_blank"
+                      >Staffsite</a>
+                  </li>
+                  <li>
+                    <a href="https://studentsite.gunadarma.ac.id/" target="_blank">Studensite</a>
+                  </li>
+                  <li>
+                    <a href="http://career.gunadarma.ac.id/" target="_blank">CareerCenter</a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      Library
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+              <div class="row">
+                <div class="email__gundar">
+                  <div class="email__boxImg">
+                    <img src="./assets/images/icons/email.png" alt="">
+                  </div>
+                  <div class="email__content">
+                    <h5>Email</h5>
+                    <p>@Gunadarma.ac.id</p>
+                  </div>
+              </div>
+              <div class="row">
+                <div class="telephone__gundar">
+                  <div class="telephone__boxImg">
+                    <img src="./assets/images/icons/phone-call.png" alt="Telephone">
+                  </div>
+                  <div class="telephone__content">
+                    <h5>Telephone</h5>
+                    <p>123456789</p>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+
     <!-- footer -->
     <footer>
-      <p>
-        <span id="newYear"></span> Copyright Gunadarma University-All rights
-        reserved
-      </p>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col">
+            <p>
+              <span id="newYear"></span> Copyright Gunadarma University-All rights
+              reserved
+            </p>
+          </div>
+        </div>
+      </div>
     </footer>
 
-    <!-- splide js -->
+    <!-- swiper js -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!-- boostrap js -->
     <script
