[Helmi] update enrollment

--- a/index.html
+++ b/index.html
@@ -892,6 +892,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./assets/scripts/main.js"></script>
+    <!-- <script src="./assets/scripts/enrollment.js"></script> -->
+    <script type="module" src="./assets/scripts/main.js"></script>
   </body>
 </html>
