[Helmi] Update feature non degree

--- a/pages/enrollment/student-enrollment.html
+++ b/pages/enrollment/student-enrollment.html
@@ -513,6 +513,24 @@
               </div>
             </div>
           </form>
+
+          <!-- if user check non degree -->
+          <div class="nonDegreePermission mt-3 d-none">
+            <form>
+              <div class="choicePermission">
+                <p>Select the type of permission</p>
+
+                <div class="row">
+                  <div class="col-md-8 col-12">
+                    <ul class="list-group">
+                      <li class="list-group-item active">Study permit for more than 3 months</li>
+                      <li class="list-group-item">Study permit for less than 3 months</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </form>
+        </div>
         </div>
 
         <div class="confirm__button">
