[Helmi] update student enrollment pages

--- a/pages/enrollment/student-enrollment.html
+++ b/pages/enrollment/student-enrollment.html
@@ -427,6 +427,158 @@
     </div>
 
     <!-- main content -->
+    <!-- Research  -->
+    <section id="research">
+      <div class="research__header">
+        <h2>Gunadarma University</h2>
+        <h4>RESEARCH</h4>
+      </div>
+      <div class="research__contents">
+        <nav>
+          <div class="nav nav-tabs" id="nav-tab" role="tablist">
+            <button
+              class="nav-link active"
+              id="research-group-tab"
+              data-bs-toggle="tab"
+              data-bs-target="#research-group"
+              type="button"
+              role="tab"
+              aria-controls="research-group"
+              aria-selected="true"
+            >
+              Research Group
+            </button>
+            <button
+              class="nav-link"
+              id="research-industry-tab"
+              data-bs-toggle="tab"
+              data-bs-target="#research-industry"
+              type="button"
+              role="tab"
+              aria-controls="research-industry"
+              aria-selected="false"
+            >
+              Research and Industry
+            </button>
+            <button
+              class="nav-link"
+              id="responses-covid-tab"
+              data-bs-toggle="tab"
+              data-bs-target="#responses-covid"
+              type="button"
+              role="tab"
+              aria-controls="responses-covid"
+              aria-selected="false"
+            >
+              Responses COVID-19
+            </button>
+          </div>
+        </nav>
+        <div class="tab-content" id="nav-tabContent">
+          <div
+            class="tab-pane fade show active"
+            id="research-group"
+            role="tabpanel"
+            aria-labelledby="research-group-tab"
+          >
+            <div class="container-fluid">
+              <div class="card">
+                <div class="row row-cols-md-2 align-items-center">
+                  <div class="col-md-5">
+                    <div class="research__boxImg">
+                      <img src="./../../assets/images/Mask Group 10.png" />
+                    </div>
+                  </div>
+                  <div class="col-md-7">
+                    <div class="research__content">
+                      <h3>
+                        The Importance of Implementing Social Distancing to
+                        Prevent COVID-19
+                      </h3>
+                      <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit. Saepe et blanditiis quia earum alias quisquam,
+                        molestias totam consectetur illo similique aliquam
+                        quidem illum consequatur nobis repudiandae sapiente,
+                        fuga veritatis. Minima.
+                      </p>
+                      <a href="#">Read More...</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="row row-cols-md-2 align-items-center">
+                  <div class="col-md-7">
+                    <div class="research__content">
+                      <h3>
+                        The Importance of Implementing Social Distancing to
+                        Prevent COVID-19
+                      </h3>
+                      <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit. Saepe et blanditiis quia earum alias quisquam,
+                        molestias totam consectetur illo similique aliquam
+                        quidem illum consequatur nobis repudiandae sapiente,
+                        fuga veritatis. Minima.
+                      </p>
+                      <a href="#">Read More...</a>
+                    </div>
+                  </div>
+                  <div class="col-md-5">
+                    <div class="research__boxImg">
+                      <img src="./../../assets/images/Mask Group 13.png" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="row row-cols-md-2 align-items-center">
+                  <div class="col-md-5">
+                    <div class="research__boxImg">
+                      <img src="./../../assets/images/Mask Group 11.png" />
+                    </div>
+                  </div>
+                  <div class="col-md-7">
+                    <div class="research__content">
+                      <h3>
+                        The Importance of Implementing Social Distancing to
+                        Prevent COVID-19
+                      </h3>
+                      <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing
+                        elit. Saepe et blanditiis quia earum alias quisquam,
+                        molestias totam consectetur illo similique aliquam
+                        quidem illum consequatur nobis repudiandae sapiente,
+                        fuga veritatis. Minima.
+                      </p>
+                      <a href="#">Read More...</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="tab-pane fade"
+            id="research-industry"
+            role="tabpanel"
+            aria-labelledby="research-industry-tab"
+          >
+            Research and Industry
+          </div>
+          <div
+            class="tab-pane fade"
+            id="responses-covid"
+            role="tabpanel"
+            aria-labelledby="responses-covid-tab"
+          >
+            Responses COVID-19
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- App management landing page -->
     <section class="applicationManagement">
       <div class="app__header">
