[Helmi] merapihkan struktur folder

--- a/pages/enrollment/degree/input-degree.html
+++ b/pages/enrollment/degree/input-degree.html
@@ -657,7 +657,7 @@
           <div class="tab-pane fade" id="document" role="tabpanel" aria-labelledby="document-tab">
             <form>
               <div class="row">
-                <div class="col-6">
+                <div class="col-md-6 col-12">
                   <h4>Supporting Documents</h4>
                 </div>
               </div>
@@ -734,19 +734,36 @@
 
             <div class="disclaimer__content">
               <h5>Disclaimer :</h5>
-              <ul class="disclaimer__lists">
-                <li>All documents are to be scanned and are in color document format (not Black and White).</li>
-                <li>These documents needs to be sent to staff of international office of Universities Gunadarma through email:<a href="#">intloffoce.ud@gmail.com</a> with <span>maximum of 2 months prior the departure</span> of the students to Universities Gunadarma
+              <!-- <ul class="disclaimer__lists">
+                <li>
+                  All documents are to be scanned and are in color document format (not Black and White).
                 </li>
-              </ul>
+                <li>
+                  These documents needs to be sent to staff of international office of Universities Gunadarma through email:<a href="#">intloffoce.ud@gmail.com</a> with <span>maximum of 2 months prior the departure</span> of the students to Universities Gunadarma 
+                </li>
+              </ul> -->
+              <div class="disclaimer__lists">
+                <div class="disclaimer__list--one">
+                    <i class="bi bi-record-fill"></i>
+                  <p>
+                    All documents are to be scanned and are in color document format (not Black and White).
+                  </p>
+                </div>
+                <div class="disclaimer__list--two">
+                    <i class="bi bi-record-fill"></i>
+                  <p>
+                    These documents needs to be sent to staff of international office of Universities Gunadarma through email:<a href="#">intloffoce.ud@gmail.com</a> with <span>maximum of 2 months prior the departure</span> of the students to Universities Gunadarma
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
 
         <div class="confirm__button mt-2">
           <p>Please click "Next" after selecting the application type</p>
-          <button class="btn secondary__button" id="backStep1">Previous</button>
-          <button class="btn primary__button" id="nextStep3">
+          <button class="btn secondary__button mx-auto" id="backStep1">Previous</button>
+          <button class="btn primary__button mx-auto" id="nextStep3">
             <a href="./final-step.html">Next</a>
           </button>
         </div>
