[Helmi] update short course

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                 <div class="accordion-body">
                                   <ul>
                                     <li>
-                                      <a href="#">Short Courses</a>
+                                      <a href="./pages/courses/short-course.html">Short Courses</a>
                                     </li>
                                     <li>
                                       <a href="#">Undergraduate Courses</a>
@@ -389,7 +389,7 @@
               </a>
             </div>
             <div class="col">
-              <a href="#">
+              <a href="./pages/courses/detail-course.html">
                 <div class="card">
                   <img
                     src="./assets/images/computer-science.png"
@@ -419,7 +419,9 @@
             <!-- end for loop -->
           </div>
           <div class="interProgram__allCourse">
-            <button class="btn primary__button">All Courses</button>
+            <button class="btn primary__button">
+              <a href="./pages/courses/short-course.html" class="text-white">All Courses</a>
+            </button>
           </div>
         </div>
       </div>
