[Helmi] update courses slicing

--- a/pages/courses/detail-course.html
+++ b/pages/courses/detail-course.html
@@ -317,7 +317,7 @@
     </header>
 
     <!-- jumbotron -->
-    <div class="jumbotron__studentEnrollment">
+    <div class="jumbotron__courses">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-8 col-12">
@@ -335,6 +335,9 @@
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa corrupti voluptas vel quisquam illum voluptate quod impedit ab nisi, esse mollitia ad aliquid delectus ea sit autem officiis. Reprehenderit, tenetur!
                         </p>
                     </div>
+                    <div class="jumbotron__button--primary">
+                      <button class="btn">Chat With Us</button>
+                  </div>
                 </div>
                 <div class="col-md-4 col-12">
                     <div class="jumbotron__image-preview">
@@ -505,11 +508,11 @@
 
                   <button class="primary__button btn">Apply</button>
                 </div>
+                </div>
+                <button class="accordion__course">
+                  <i class="bi bi-caret-down-fill"></i>
+                </button>
               </div>
-              <button class="accordion__course">
-                <i class="bi bi-caret-down-fill"></i>
-              </button>
-            </div>
             <div class="shortCourses__context">
               <!-- looping for more short course -->
               <div class="splide">
