--- a/pages/courses/short-course.html
+++ b/pages/courses/short-course.html
@@ -317,7 +317,7 @@
     </header>
 
     <!-- jumbotron -->
-    <div class="jumbotron__studentEnrollment">
+    <div class="jumbotron__courses">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-8 col-12">
@@ -325,15 +325,18 @@
                         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="./../../index.html">Home</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Student Enrollment</li>
+                                <li class="breadcrumb-item active" aria-current="page">Short Courses</li>
                             </ol>
                           </nav>
                     </div>
                     <div class="jumbotron__preview">
-                        <h2>Student Enrollment</h2>
+                        <h2>Short Courses</h2>
                         <h5>Premium. Proven. Loved. Study at Gunadarma</h5>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa corrupti voluptas vel quisquam illum voluptate quod impedit ab nisi, esse mollitia ad aliquid delectus ea sit autem officiis. Reprehenderit, tenetur!
                         </p>
+                    </div>
+                    <div class="jumbotron__button--primary">
+                      <button class="btn">Chat With Us</button>
                     </div>
                 </div>
                 <div class="col-md-4 col-12">
@@ -585,7 +588,7 @@
                   </nav>
               </div>
             </div>
-          </section>
+        </section>
     </main>
 
     <!-- thumbnail -->
