[Helmi] update courses slicing

--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
                                       <a href="./pages/courses/short-course.html">Short Courses</a>
                                     </li>
                                     <li>
-                                      <a href="#">Undergraduate Courses</a>
+                                      <a href="./pages/courses/undergraduate/undergraduate.html">Undergraduate Courses</a>
                                     </li>
                                     <li>
-                                      <a href="#">Postgraduate Courses</a>
+                                      <a href="./pages/courses/postgraduate/postgraduate.html">Postgraduate Courses</a>
                                     </li>
                                   </ul>
                                 </div>
