--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             Start a Journey
           </button>
           <button type="button" class="btn secondary__button">
-            Program of Study
+            <a href="./pages/courses/short-course.html" class="text-white text-decoration-none">Program Study</a>
           </button>
         </div>
       </div>
@@ -906,10 +906,14 @@
         grabCursor: true,
         centeredSlides: true,
           slidesPerView: 'auto',
+          autoplay: {
+          delay: 3000,
+          disableOnInteraction: false,
+          },
           coverflowEffect: {
             rotate: 50,
             stretch: 0,
-            depth: 100,
+            depth: 50,
             modifier: 1,
             slideShadows: true,
           },
