[Helmi] update scholarships page

--- a/pages/scholarship/list-scholarship.html
+++ b/pages/scholarship/list-scholarship.html
@@ -373,7 +373,7 @@
                                         <p class="px-2">Tuesday, March 8th, 2021</p>
                                       </div>
                                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                      <a href="#" class="scholarship__readMore">Read more..</a>
+                                      <a href="./detail-scholarship.html" class="scholarship__readMore">Read more..</a>
                                     </div>
                                   </div>
                             </div>
@@ -387,7 +387,7 @@
                                         <p class="px-2">Tuesday, March 8th, 2021</p>
                                       </div>
                                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                      <a href="#" class="scholarship__readMore">Read more..</a>
+                                      <a href="./detail-scholarship.html" class="scholarship__readMore">Read more..</a>
                                     </div>
                                   </div>
                             </div>
@@ -401,7 +401,7 @@
                                         <p class="px-2">Tuesday, March 8th, 2021</p>
                                       </div>
                                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                      <a href="#" class="scholarship__readMore">Read more..</a>
+                                      <a href="./detail-scholarship.html" class="scholarship__readMore">Read more..</a>
                                     </div>
                                   </div>
                             </div>
