[Helmi] Update profile & edit profile page

--- a/pages/login/index.html
+++ b/pages/login/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Registrasi</title>
 
     <!-- boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,80 +16,41 @@
 </head>
 
 <body>
-    <!-- login -->
-    <main class="login">
+    <!-- registrasi -->
+    <main class="registrasi">
         <div class="container-fluid">
             <div class="row row-cols-md-2 row-cols-1 align-items-center">
-                <div class="col login__gambar p-3">
-                    <div class="login__gambarBox">
-                        <div class="login__gambarBox--content">
-                            <div class="login__gambarBox--contentIllustration">
-                                <img src="./../../assets/images/illustration_login.png">
-                            </div>
+                <div class="col registrasi__form p-5">
+                    <div class="registrasi__formBox">
+                        <div class="registrasi__formHeader">
+                            <h5>Sign In..</h5>
+                            <p>Don’t have an account? <a href="./../registrasi/index.html">Sign Up</a></p>
                         </div>
-                    </div>
-                </div>
-                <div class="col login__form p-5">
-                    <div class="login__formBox">
-                        <div class="login__formHeader">
-                            <h5>Start Your Journey</h5>
-                            <p>Already have an account? <a href="#">Sign In</a></p>
-                        </div>
-                        <div class="login__formContent">
+                        <div class="registrasi__formContent">
                             <form>
-                                <div class="mb-3">
-                                    <label for="name" class="form-label">Nama</label>
-                                    <input type="text" class="form-control" id="name">
-                                </div>
                                 <div class="mb-3">
                                     <label for="exampleInputEmail1" class="form-label">Email address</label>
                                     <input type="email" class="form-control" id="exampleInputEmail1">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="numberPhone" class="form-label">Mobile Number</label>
-                                    <div class="input-group mb-3">
-                                        <button class="btn btn-outline-secondary dropdown-toggle btn__dropdown" type="button"
-                                            data-bs-toggle="dropdown" aria-expanded="false">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="23.222" height="16.188"
-                                                viewBox="0 0 23.222 16.188">
-                                                <g id="indonesia" transform="translate(-12 -27.751)">
-                                                    <path id="Path_1906" data-name="Path 1906"
-                                                        d="M12,27.751H35.222V43.939H12Z" fill="#d60a2e" />
-                                                    <path id="Path_1907" data-name="Path 1907"
-                                                        d="M12,64H35.222v8.094H12Z" transform="translate(0 -28.155)"
-                                                        fill="#f0f0f0" />
-                                                </g>
-                                            </svg>
-
-                                        </button>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#">Action</a></li>
-                                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                            <li>
-                                                <hr class="dropdown-divider">
-                                            </li>
-                                            <li><a class="dropdown-item" href="#">Separated link</a></li>
-                                        </ul>
-                                        <input type="tel" name="tel1" maxlength="3" minlength="3" value="+62" size="3"
-                                            disabled class="text-center"/>
-                                        <input type="tel" class="form-control">
-                                    </div>
-
-                                </div>
-                                <div class="mb-3">
                                     <label for="password" class="form-label">Password</label>
                                     <div class="input-group mb-3">
-                                        <input type="password" class="form-control is-invalid" id="password">
+                                        <input type="password" class="form-control" id="password">
                                         <i class="far fa-eye input-group-text align-middle" id="togglePassword"></i>
-                                        <div class="invalid-feedback">
-                                            *Must be at least 8 characters long, uppercase, lowercase, and numbers
-                                        </div>
                                     </div>
+                                </div>
+                                <div class="group__form d-flex justify-content-between mb-3 align-items-center">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="rememberMe">
+                                        <label class="form-check-label" for="rememberMe">
+                                            Remember Me
+                                        </label>
+                                    </div>
+                                    <a href="#" class="forgot__password">Forgot your password?</a>
                                 </div>
                                 <div class="row row-cols-1 gy-3 justify-content-around align-items-center text-center button__group">
                                     <div class="col-lg-4">
-                                        <button type="submit" class="btn btn-warning text-white rounded w-75 text-center">Create Account</button>
+                                        <button type="submit" class="btn btn-warning text-white rounded w-75 text-center">Sign In</button>
                                     </div>
                                     <div class="col-lg-3">
                                         <div class="row align-items-center">
@@ -108,11 +69,20 @@
                                                     <path id="Path_2013" data-name="Path 2013" d="M53.129,3.7l-5.2,4.258a9.546,9.546,0,0,0-14.074,5L28.625,8.67h0A16.057,16.057,0,0,1,53.129,3.7Z" transform="translate(-26.829)" fill="#f14336"/>
                                                 </svg>
                                             </span>
-                                            <button type="submit" class="btn btn-primary rounded-end">Sign Up with Google</button>
+                                            <button type="submit" class="btn btn-primary rounded-end px-4">Sign Up with Google</button>
                                         </div>
                                     </div>
                                 </div>
                             </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="col registrasi__gambar p-3">
+                    <div class="registrasi__gambarBox">
+                        <div class="registrasi__gambarBox--content">
+                            <div class="registrasi__gambarBox--contentIllustration">
+                                <img src="./../../assets/images/Illustration_Register.png">
+                            </div>
                         </div>
                     </div>
                 </div>
