[Helmi] Update profile & edit profile page

--- a/pages/users/edit-profile.html
+++ b/pages/users/edit-profile.html
@@ -26,7 +26,7 @@
                     <span class="nav-bar__menu-1" id="sidebarCall">Menu</span>
                 </li>
                 <li class="nav-bar__menu">
-                    <img src="./../../../assets/images/logo-gundar.png" alt="Gunadarma" />
+                    <img src="./../../assets/images/logo-gundar.png" alt="Gunadarma" />
                 </li>
                 <li class="nav-bar__menu">
                     <div class="nav-bar__numberInfo">
@@ -481,7 +481,7 @@
                     <div class="row">
                         <div class="email__gundar">
                             <div class="email__boxImg">
-                                <img src="./../../../assets/images/icons/email.png" alt="">
+                                <img src="./../../assets/images/icons/email.png" alt="">
                             </div>
                             <div class="email__content">
                                 <h5>Email</h5>
@@ -491,7 +491,7 @@
                         <div class="row">
                             <div class="telephone__gundar">
                                 <div class="telephone__boxImg">
-                                    <img src="./../../../assets/images/icons/phone-call.png" alt="Telephone">
+                                    <img src="./../../assets/images/icons/phone-call.png" alt="Telephone">
                                 </div>
                                 <div class="telephone__content">
                                     <h5>Telephone</h5>
@@ -526,8 +526,8 @@
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
-    <script type="module" src="./../../../assets/scripts/main.js"></script>
-    <script src="./../../../assets/scripts/course.js"></script>
+    <script type="module" src="./../../assets/scripts/main.js"></script>
+    <script src="./../../assets/scripts/course.js"></script>
     <script>
         function readURL(input) {
             if (input.files && input.files[0]) {
