--- a/pages/users/edit-profile.html
+++ b/pages/users/edit-profile.html
@@ -376,7 +376,7 @@
                         <div class="card p-3">
                             <h5>Contact</h5>
                             <div class="card-body">
-                                <div class="row">
+                                <div class="row row-cols-1 row-cols-md-2">
                                     <div class="col">
                                         <div class="mb-3">
                                             <label for="numberPhone" class="form-label">Mobile Number</label>
@@ -417,10 +417,13 @@
                                         </div>
                                     </div>
                                     <div class="col">
-                                        <div class="form-floating">
-                                            <textarea class="form-control" placeholder="Leave a comment here"
-                                                id="address" style="height: 100%"></textarea>
+                                        <div class="mb-3">
                                             <label for="address">Address</label>
+                                            <textarea class="form-control"
+                                            Kota Bogor" id="address" style="height: 130px">
+                                            Villa Bogor Indah blok EE 
+                                            3 no 9, Bogor Utara, 16157
+                                            </textarea>
                                         </div>
                                     </div>
                                 </div>
